<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_large">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/cardview_default_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <ImageView
        android:id="@+id/imgDetail"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="@dimen/margin_container"
        style="@style/ImageView.detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextView.QuicksandBold16sp"
        android:layout_marginStart="@dimen/margin_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"
        app:layout_constraintTop_toTopOf="@+id/imgDetail" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextView.QuicksandBold14sp"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        />

    <TextView
        android:id="@+id/tv_title_typical_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextView.QuicksandBold16sp"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_price"
        android:text="@string/typical_food" />

    <TextView
        android:id="@+id/tv_typical_food"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextView.QuicksandBold14sp"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_typical_food"
        />

    <TextView
        android:id="@+id/tv_taste_title"
        style="@style/TextView.QuicksandBold16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_typical_food"
        android:text="@string/taste" />

    <RatingBar
        android:id="@+id/rating_bar_taste"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="1dp"
        android:rating="4"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_taste_title" />

    <TextView
        android:id="@+id/tv_title_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextView.QuicksandBold16sp"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"
        app:layout_constraintTop_toBottomOf="@+id/rating_bar_taste"
        android:text="@string/rating" />

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="1dp"
        android:rating="4"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toEndOf="@+id/imgDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_rating" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginEnd="@dimen/margin_container"
        android:layout_marginTop="@dimen/margin_large"
        android:orientation="horizontal"
        android:layout_gravity="center"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetail"
        tools:itemCount="3"
        tools:listitem="@layout/list_item_horizontal_food" />

    <TextView
        android:id="@+id/tv_ingredient_title"
        style="@style/TextView.QuicksandBold16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginHorizontal="@dimen/margin_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_horizontal"
        android:text="@string/ingredients" />

    <TextView
        android:id="@+id/tv_ingredient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextView.QuicksandBold14sp"
        android:layout_marginHorizontal="@dimen/margin_container"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_title" />

    <TextView
        android:id="@+id/tv_description_title"
        style="@style/TextView.QuicksandBold16sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="@dimen/margin_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingredient"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextView.QuicksandBold14sp"
        android:layout_marginHorizontal="@dimen/margin_container"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_title"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>